[package]
name = "qmassa"
version = "1.1.0"
description = "Terminal-based tool for displaying GPUs usage stats on Linux."
repository = "https://github.com/ulissesf/qmassa"
readme = "README.md"
license = "Apache-2.0"
keywords = ["gpu", "graphics", "statistics", "usage"]
categories = ["command-line-utilities", "graphics"]
edition = "2021"
rust-version = "1.74.0"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
crossterm = "0.28.1"
env_logger = "0.11.8"
itertools = "0.13.0"
libc = "0.2.175"
log = "0.4.27"
nix = { version = "0.29.0", features = ["ioctl"] }
plotters = { version = "0.3.7", default-features = false, features = ["line_series", "svg_backend"] }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tui-scrollview = "0.5.1"
udev = { version = "0.9.3", features = ["hwdb"] }
