[package]
name = "qmlib"
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "qmassa's GPU stats library"

[dependencies]
anyhow = "1.0.100"
libc = "0.2.178"
log = "0.4.29"
nix = { version = "0.29.0", features = ["ioctl"] }
serde = { version = "1.0.228", features = ["derive"] }
udev = { version = "0.9.3", features = ["hwdb"] }
