[package]
name = "qmmd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "qmassa metrics daemon"
keywords = ["gpu", "graphics", "metrics", "prometheus"]
categories = ["development-tools::debugging", "graphics"]
readme = "README.md"

[dependencies]
qmlib = { version = "2.0.1", path = "../qmlib" }
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
env_logger = "0.11.9"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
log = "0.4.29"
