[package]
name = "qmmd"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "qmassa metrics daemon"
keywords = ["gpu", "graphics", "metrics", "prometheus"]
categories = ["development-tools::debugging", "graphics"]
readme = "README.md"

[dependencies]
qmlib = { version = "2.1.0", path = "../qmlib" }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
log = "0.4.29"
